tester/tests/compile-pass/application-with-endpoint.srv

application AppWithEndpoint

    define_action(show, GET, "/")

    endpoint show() -> String
        "Hello World"
    end

end
