tester/tests/compile-fail/invalid_endpoint_typechecl.srv
application App

    define_action(show, GET, "/")

    endpoint show() -> String
        123
    end

end
